GH-50: Post - Maven Jacoco Plugin